svc1.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service-v1
spec:
  selector:
    app: api
    version: v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
