svcapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
    - port: 5000
      targetPort: 5000
  type: NodePort
