ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: mysql-operator
spec:
  rules:
    - host: api.com
      http:
        paths:
          - path: /xxx
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
          - path: /info
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
  tls:
    - hosts:
        - api.com
      secretName: tls-secret
